# Core/Models/Survey/QuestionDto.cs
@@ -6,11 +6,17 @@ namespace Core.Models.Survey
     {
         public int? Id { get; set; }
 
+        public int Index { get; set; }
+
         public string QuestionText { get; set; }
 
         public QuestionType QuestionType { get; set; }
 
-        //values to choose in case of single or multi select
+        public ValidationConfig ValidationConfig { get; set; }
+
+        /// <summary>
+        /// Values to choose in case of single or multi select
+        /// </summary>
         public List<string> Values { get; set; }
     }
 }
